Flujo de Permisos 90 %, Flujo de Proyectos 100 %, edicion de proyectos. Código limpio, flujo probado con validaciones para el módulo de proyectos

--- a/web/permisostrabajo/creacion_busquedad.xhtml
+++ b/web/permisostrabajo/creacion_busquedad.xhtml
@@ -30,8 +30,7 @@
                     <p:message for="fecha_fin"/>
 
                     <f:facet name="footer">
-                        <p:commandButton value="Buscar" icon="ui-icon-check" action="#{creaPermisoController.consultarPermisos}" ajax="false"/>
-                        <p:commandButton value="Atras" icon="ui-icon-arrowreturnthick-1-w" action="#{creaPermisoController.navPermisos}" ajax="false"/>
+                        <p:commandButton value="Buscar" icon="ui-icon-check" action="#{creaPermisoController.buscarPermisos}" ajax="false"/>
                     </f:facet>
             </p:panelGrid>
             </p:panel>
