--- a/web/permisostrabajo/proyecto_permisos.xhtml
+++ b/web/permisostrabajo/proyecto_permisos.xhtml
@@ -15,6 +15,7 @@
                 <p:panelGrid  style="margin-top:15px">
                     <f:facet name="header">  
                         <p:row>
+                            <p:column style="border-width: 1px;"><p:outputLabel value="Id"/></p:column>
                             <p:column style="border-width: 1px;"><p:outputLabel value="Num. Gestion"/></p:column>
                             <p:column style="border-width: 1px;"><p:outputLabel value="Nombre"/></p:column>
                             <p:column style="border-width: 1px;"><p:outputLabel value="Cuenta"/></p:column>
@@ -25,6 +26,9 @@
                         
                     </f:facet> 
                     <p:row>
+                        <p:column style="border-width: 1px;">
+                            <p:outputLabel value="#{proyectoController.proyecto.id}"/>
+                        </p:column>
                         <p:column style="border-width: 1px;">
                             <p:inplace editor="true" label="#{proyectoController.proyecto.numGestionCambio}">  
                                 <p:inputText value="#{proyectoController.proyecto.numGestionCambio}">
@@ -48,14 +52,14 @@
                         </p:column>
                         <p:column style="border-width: 1px;">
                             <p:inplace editor="true" label="#{proyectoController.proyecto.fIniFormato}">
-                                <p:calendar value="#{proyectoController.proyecto.fechaIni}" pattern="yyyy-MM-dd" >
-                                    <p:ajax event="dateSelect"/>
+                                <p:calendar id="fecha_ini" value="#{proyectoController.proyecto.fechaIni}" pattern="yyyy-MM-dd" mindate="#{proyectoController.fechaActual}" >
+                                    <p:ajax event="dateSelect" listener="#{proyectoController.formatearFechaIni}" update="fecha_fin"/>
                                 </p:calendar> 
                             </p:inplace> 
                         </p:column>
                         <p:column style="border-width: 1px;">
                             <p:inplace editor="true" label="#{proyectoController.proyecto.fFinFormato}">  
-                                <p:calendar value="#{proyectoController.proyecto.fechaFin}" pattern="yyyy-MM-dd" >
+                                <p:calendar id="fecha_fin" value="#{proyectoController.proyecto.fechaFin}" pattern="yyyy-MM-dd" mindate="#{proyectoController.fechaIniProy}" >
                                     <p:ajax event="dateSelect"/>
                                 </p:calendar>
                             </p:inplace> 
@@ -73,15 +77,17 @@
             </p:panel>
             <p:separator/> 
             <p:panel header="Actividades del Proyecto">
-            <p:commandButton ajax="false" action="#{proyectoController.crearPermiso}" icon="ui-icon-document" value="Crear" title="Crear Permiso de Trabajo"/>
+            <p:commandButton ajax="false" action="#{proyectoController.crearNuevoPermiso}" icon="ui-icon-document" value="Crear" title="Crear Permiso de Trabajo"/>
             <p:dataTable value="#{proyectoController.proyecto.permisos}" var="permiso"
                              paginator="true"
                              rows="5"
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink}"
                              paginatorPosition="bottom"
+                             paginatorAlwaysVisible="false"
                              >
                     <p:column headerText="#{labels.numero}" filterBy="#{permiso.id}">
-                        <p:commandLink ajax="false" value="#{permiso.id}" action="#{proyectoController.consultarPermiso(permiso)}"/>
+                        <p:commandLink ajax="false" value="#{permiso.id}" action="#{proyectoController.consultarPermiso(permiso)}" 
+                                       disabled="#{permiso.estadoPermiso.id ne 1}"/>
                     </p:column>
                     <p:column headerText="Actividad">
                         <h:outputText value="#{permiso.tarea}"/>
@@ -106,7 +112,6 @@
                </p:panel>
                <p:separator/> 
                <p:commandButton value="Finalizar" icon="ui-icon-radio-on" action="#{proyectoController.finalizar}" ajax="false"/>
-               <p:commandButton value="Atras" icon="ui-icon-arrowreturnthick-1-w" action="#{proyectoController.navBotonAtras}" ajax="false"/>
 
         </h:form>
    </ui:define>
