--- a/web/permisostrabajo/permisos.xhtml
+++ b/web/permisostrabajo/permisos.xhtml
@@ -11,7 +11,7 @@
     <ui:define name="contenido">
         <h:form id="form" >
             <p:growl id="msgs" />
-            <p:commandButton ajax="false" action="#{creaPermisoController.crearNuevo}" icon="ui-icon-document" value="Crear" title="Crear Permiso de Trabajo"/>
+            <p:commandButton ajax="false" action="#{creaPermisoController.crearNuevoPermiso}" icon="ui-icon-document" value="Crear" title="Crear Permiso de Trabajo"/>
             <p:spacer width="5"/>
             <p:commandButton icon="ui-icon-search" action="#{creaPermisoController.navBusqueda}" value="Buscar" ajax="false" title="Buscar Permiso de Trabajo"/>
 
@@ -24,8 +24,7 @@
                              paginatorPosition="bottom">
                     <p:column headerText="#{labels.numero}" filterBy="#{permiso.id}">
                         <p:commandLink ajax="false" value="#{permiso.id}"
-                                       actionListener="#{creaPermisoController.abrirTrazabilidadPermiso}"
-                                       action="#{creaPermisoController.navTrazabilidad}">
+                                       action="#{creaPermisoController.consultarTrazabilidad(permiso)}">
                             <f:attribute name="itemCambiar" value="#{permiso}" />
                         </p:commandLink>
                     </p:column>
@@ -44,9 +43,7 @@
                             <h:panelGrid columns="1">
                                 Está seguro que desea borrar  <br/> 
                                 el permiso de trabajo No: #{permiso.id}?
-                                <p:commandButton value="Borrar" icon="ui-icon-trash" actionListener="#{creaPermisoController.borrarPermiso}" ajax="false">
-                                    <f:attribute name="itemCambiar" value="#{permiso}" />
-                                </p:commandButton>
+                                <p:commandButton value="Borrar" icon="ui-icon-trash" actionListener="#{creaPermisoController.borrarPermiso(permiso)}" ajax="false"/>
                             </h:panelGrid>
                         </p:dialog>
                     </p:column>
