--- a/web/permisostrabajo/proyecto_busqueda.xhtml
+++ b/web/permisostrabajo/proyecto_busqueda.xhtml
@@ -16,16 +16,15 @@
             <p:panel header="Diligencia datos de búsqueda">
                 <p:panelGrid columns="3">
                     <h:outputLabel for="fecha_ini" value="Desde:"/>
-                    <p:calendar id="fecha_ini" pattern="yyyy-MM-dd" value="#{proyectoController.fechaDesde}"/>
+                    <p:calendar id="fecha_ini" pattern="yyyy-MM-dd" value="#{proyectoController.fechaDesde}" required="true"/>
                     <p:message for="fecha_ini"/>
                     
                     <h:outputLabel for="fecha_fin" value="Hasta:"/>
-                    <p:calendar id="fecha_fin" pattern="yyyy-MM-dd" value="#{proyectoController.fechaHasta}"/>
+                    <p:calendar id="fecha_fin" pattern="yyyy-MM-dd" value="#{proyectoController.fechaHasta}" required="true"/>
                     <p:message for="fecha_fin"/>
 
                     <f:facet name="footer">
-                        <p:commandButton value="Buscar" icon="ui-icon-check" action="#{proyectoController.consultarProyectos}" ajax="false"/>
-                        <p:commandButton value="Atras" icon="ui-icon-arrowreturnthick-1-w" action="#{proyectoController.navBotonAtras}" ajax="false"/>
+                        <p:commandButton value="Buscar" icon="ui-icon-search" action="#{proyectoController.buscarProyectos}" ajax="false"/>
                     </f:facet>
             </p:panelGrid>
             </p:panel>
